fix tag in post detail

--- a/blog_module/templates/blog_module/post-details.html
+++ b/blog_module/templates/blog_module/post-details.html
@@ -50,8 +50,9 @@
                                                 <div class="col-6">
                                                     <ul class="post-tags">
                                                         <li><i class="fa fa-tags"></i></li>
-                                                        <li><a href="#">Best Templates</a>,</li>
-                                                        <li><a href="#">TemplateMo</a></li>
+                                                            <li><a href="#">{{ articles.tags.all.0 }}</a>,</li>
+                                                            <li><a href="#">{{ articles.tags.all.1 }}</a>,</li>
+                                                            <li><a href="#">{{ articles.tags.all.2 }}</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="col-6">
